--- a/Theme/Royce/_config.yml
+++ b/Theme/Royce/_config.yml
@@ -8,7 +8,6 @@ author:
   image: 'IMG_5081.jpg'
   greetings: "Hi there! My name is Natalia Edelson. I recently graduated from Flatiron, where I studied Data Science. In my portfolio, you'll find a collection of my projects in exploratory data analysis (EDA), machine learning, deep learning, natural language processing (NLP) and more."
 favicon: 'assets/images/favicon.ico'
-baseurl: 
 production_url: https://royce.netlify.com/
 # post article comment flag
 # disqus: 'justgoodthemes'
@@ -68,3 +67,6 @@ markdown: kramdown
 sass:
   sass_dir: _sass
   style: compressed
+
+url: DataNat.github.com
+baseurl: /My_Blog
