--- a/Theme/Royce/Gemfile
+++ b/Theme/Royce/Gemfile
@@ -1,7 +1,13 @@
 source "https://rubygems.org"
 
 # This will help ensure the proper Jekyll version is running.
-gem "jekyll", "~> 4.2.2"
+gem "jekyll", "3.9.0"
+
+group :jekyll_plugins do
+  gem "jekyll-feed", "~> 0.11"
+  gem "github-pages", "222"
+end
+
 
 group :jekyll_plugins do
   gem 'jekyll-paginate'
